fix(collapsible): overflow on content

--- a/materials/public/css/scss/components/_collapsible.scss
+++ b/materials/public/css/scss/components/_collapsible.scss
@@ -68,6 +68,7 @@
         transition: grid-template-rows 250ms;
         word-wrap: break-word;
         line-break: strict;
+        overflow: hidden;
     }
 
     &__items {
